@@ -68,6 +68,7 @@ print_usage(const char* const name, const bool error)
   fprintf(os, "  -q           Suppress all output except data.\n");
   fprintf(os, "  -r ROOT_URI  Keep relative URIs within ROOT_URI.\n");
   fprintf(os, "  -s INPUT     Parse INPUT as string (terminates options).\n");
+  fprintf(os, "  -t           Write terser output without newlines.\n");
   fprintf(os, "  -v           Display version information and exit.\n");
   return error ? 1 : 0;
 }
@@ -95,21 +96,20 @@ main(int argc, char** argv)
     return print_usage(prog, true);
   }
 
-  SerdSyntax  input_syntax  = (SerdSyntax)0;
-  SerdSyntax  output_syntax = (SerdSyntax)0;
-  bool        from_string   = false;
-  bool        from_stdin    = false;
-  bool        ascii         = false;
-  bool        bulk_read     = true;
-  bool        bulk_write    = false;
-  bool        full_uris     = false;
-  bool        lax           = false;
-  bool        quiet         = false;
-  size_t      stack_size    = 4194304;
-  const char* add_prefix    = NULL;
-  const char* chop_prefix   = NULL;
-  const char* root_uri      = NULL;
-  int         a             = 1;
+  SerdSyntax      input_syntax  = (SerdSyntax)0;
+  SerdSyntax      output_syntax = (SerdSyntax)0;
+  SerdWriterFlags writer_flags  = 0u;
+  bool            from_string   = false;
+  bool            from_stdin    = false;
+  bool            bulk_read     = true;
+  bool            bulk_write    = false;
+  bool            lax           = false;
+  bool            quiet         = false;
+  size_t          stack_size    = 4194304;
+  const char*     add_prefix    = NULL;
+  const char*     chop_prefix   = NULL;
+  const char*     root_uri      = NULL;
+  int             a             = 1;
   for (; a < argc && !from_string && argv[a][0] == '-'; ++a) {
     if (argv[a][1] == '\0') {
       from_stdin = true;
@@ -120,19 +120,21 @@ main(int argc, char** argv)
       const char opt = argv[a][o];
 
       if (opt == 'a') {
-        ascii = true;
+        writer_flags |= SERD_WRITE_ASCII;
       } else if (opt == 'b') {
         bulk_write = true;
       } else if (opt == 'e') {
         bulk_read = false;
       } else if (opt == 'f') {
-        full_uris = true;
+        writer_flags |= (SERD_WRITE_UNQUALIFIED | SERD_WRITE_UNRESOLVED);
       } else if (opt == 'h') {
         return print_usage(prog, false);
       } else if (opt == 'l') {
         lax = true;
       } else if (opt == 'q') {
         quiet = true;
+      } else if (opt == 't') {
+        writer_flags |= SERD_WRITE_TERSE;
       } else if (opt == 'v') {
         return print_version();
       } else if (opt == 's') {
@@ -217,10 +219,6 @@ main(int argc, char** argv)
   if (!output_syntax) {
     output_syntax = input_has_graphs ? SERD_NQUADS : SERD_NTRIPLES;
   }
-
-  const SerdWriterFlags writer_flags =
-    ((ascii ? SERD_WRITE_ASCII : 0u) | //
-     (full_uris ? (SERD_WRITE_UNQUALIFIED | SERD_WRITE_UNRESOLVED) : 0u));
 
   SerdNode* base = NULL;
   if (a < argc) { // Base URI given on command line
